--- a/package.json
+++ b/package.json
@@ -38,15 +38,9 @@
         "files": [
           "tests/**"
         ],
-        "globals": [
-          "describe",
-          "test",
-          "expect",
-          "afterEach",
-          "beforeEach",
-          "beforeAll",
-          "jest",
-          "jasmine"
+        "envs": [
+          "node",
+          "jest"
         ]
       }
     ]
